--- a/OpenCV/2_Drawing.ipynb
+++ b/OpenCV/2_Drawing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,29 @@
     "thickness = 9\n",
     "lined_img = cv2.line(img,start_point,end_point,color,thickness)\n",
     "cv2.imshow(\"Lined_image\",lined_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drawing a Arrow Segment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_point = (0,0)\n",
+    "end_point = (100,100)\n",
+    "color = (0,250,0)\n",
+    "thickness = 9\n",
+    "image = cv2.arrowedLine(img,start_point,end_point,color,thickness)\n",
+    "cv2.imshow(\"Image\", image)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
