--- a/OpenCV/2_Drawing.ipynb
+++ b/OpenCV/2_Drawing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,107 @@
     "image = cv2.arrowedLine(img,start_point,end_point,color,thickness)\n",
     "cv2.imshow(\"Image\", image)\n",
     "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drawing an Ellipse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "centre_coor = (120,120)\n",
+    "axeslength = (50,100)\n",
+    "angle = 30\n",
+    "startangle = 0\n",
+    "endangle = 360\n",
+    "color = (0,0,0)\n",
+    "thickness = 5\n",
+    "image = cv2.ellipse(img,centre_coor,axeslength,angle,startangle,endangle,color,thickness)\n",
+    "cv2.imshow(\"Ellipse Image\",image)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drawing a Circle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "centre_coor = (110,110)\n",
+    "radius = 20\n",
+    "color = (250,0,0)\n",
+    "thickness = 2\n",
+    "image = cv2.circle(img,centre_coor,radius,color,thickness)\n",
+    "cv2.imshow('Cricleed_Image',image)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drawing a text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "font=cv2.FONT_HERSHEY_SIMPLEX\n",
+    "org =(70,200)\n",
+    "fontScale = 1\n",
+    "color = (255,255,255)\n",
+    "thickness = 4\n",
+    "image = cv2.putText(img,\"Chalpran\",org,font,fontScale,color,thickness,cv2.LINE_AA)\n",
+    "cv2.imshow(\"Text_Image\",image)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "width = 400\n",
+    "height = 300\n",
+    "\n",
+    "img = np.zeros((height, width, 3), np.uint8) \n",
+    " \n",
+    "p1 = (100, 200) \n",
+    "p2 = (50, 50) \n",
+    "p3 = (300, 100) \n",
+    "\n",
+    "cv2.line(img, p1, p2, (255, 0, 0), 3) \n",
+    "cv2.line(img, p2, p3, (255, 0, 0), 3) \n",
+    "cv2.line(img, p1, p3, (255, 0, 0), 3) \n",
+    "\n",
+    "centroid = ((p1[0]+p2[0]+p3[0])//3, (p1[1]+p2[1]+p3[1])//3) \n",
+    "cv2.circle(img, centroid, 4, (0, 255, 0)) \n",
+    "\n",
+    "cv2.imshow(\"image\", img) \n",
+    "cv2.waitKey(0) \n",
     "cv2.destroyAllWindows()"
    ]
   },
