--- a/OpenCV/3_FeatureDetetction.ipynb
+++ b/OpenCV/3_FeatureDetetction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +125,75 @@
     "cv2.imshow('Corners Detected', img)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Corner Detection with Shi-Tomasi Corner Detection Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread(\"Screenshot 2024-07-28 230420.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tjwin\\AppData\\Local\\Temp\\ipykernel_9984\\2897207905.py:4: DeprecationWarning: `np.int0` is a deprecated alias for `np.intp`.  (Deprecated NumPy 1.24)\n",
+      "  corners = np.int0(corners)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "corners = cv2.goodFeaturesToTrack(gray,maxCorners=10,qualityLevel=0.01, minDistance=10)\n",
+    "corners = np.int0(corners)\n",
+    "for corner in corners:\n",
+    "    x,y = corner.ravel()\n",
+    "    cv2.circle(img,(x,y),3,(0,255,0),-1)\n",
+    "cv2.imshow('Shi-Tomasi Corner Detection', img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Corner detection with Harris Corner Detection method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "gray = np.float32(gray)\n",
+    "corners = cv2.cornerHarris(gray,blockSize=2,ksize=3,k=0.04)\n",
+    "\n",
+    "corners = cv2.dilate(corners,None)\n",
+    "\n",
+    "img[corners > 0.01 * corners.max()] = [0, 0, 255]  \n",
+    "\n",
+    "cv2.imshow('Harris Corners', img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
