--- a/OpenCV/4_playingvideo.ipynb
+++ b/OpenCV/4_playingvideo.ipynb
@@ -11,6 +11,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sorry but i don't have energy today"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
