--- a/OpenCV/4_playingvideo.ipynb
+++ b/OpenCV/4_playingvideo.ipynb
@@ -11,11 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#sorry but i don't have energy today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img= cv2.imread(\"Screenshot 2024-07-28 230420.png\")\n",
+    "cv2.imshow(\"KKKK\", img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
